# house-soul

./: .gitignore  LICENSE  README.md  pyproject.toml
house_soul/: assets.py  house_soul.py  interactor.py  secrets.py  snore.py
house_soul/assets/: README.md  stormlight.yml
