[tool.poetry]
name = "house-soul"
version = "0.1.0"
description = "Voice control mumble"
authors = ["Stuart Stanley <stu00@mac.com>"]
packages = [{include = "house_soul"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pvporcupine = "^3.0.3"
pvporcupinedemo = "^3.0.3"
pyaudio = "^0.2.14"
pyttsx3 = "^2.98"
pvrhino = "^3.0.3"
pvrhinodemo = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.7.0", "poetry-dynamic-versioning>=0.17.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true